调用废弃 API 处理